FIXED THE SPACING ISSUEgit add -A!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,10 @@ h3 {
 	font-weight: 300;
 }
 
+#blanks {
+	letter-spacing: 7px;
+}
+
 a:link,
 a:visited {
 	color: #fff;
